Push fix for squashed overwritten forgejo icon, which shouldn't have been overwritten as such.

--- a/styles/codeberg/catppuccin.user.less
+++ b/styles/codeberg/catppuccin.user.less
@@ -76,8 +76,12 @@
     #navbar-logo img {
       #codeberg-logo(@crust);
     }
-    .branding img {
+    :not(.powered-by > a) > .branding img {
       #codeberg-logo(@text);
+    }
+
+    a[aria-label="Forgejo"] {
+      filter: @text-filter;
     }
 
     footer {
